peaks tensor prom tf pos (jed)

--- a/notebooks/Average_peaks_per_tf_prom.ipynb
+++ b/notebooks/Average_peaks_per_tf_prom.ipynb
@@ -951,18 +951,17 @@
     "            mean_score = np.nanmean(score[:,peak[0]:peak[1]])\n",
     "            k = int((peak[0]+peak[1])/2)\n",
     "            jkval = np.array([j,k,mean_score])[:,None]\n",
-    "            JKval = np.concatenate([JKval,ijkval],1)\n",
+    "            JKval = np.concatenate([JKval,jkval],1)\n",
     "\n",
     "        \n",
-    "    return Peaks\n",
+    "    return JKval\n",
     "\n",
-    "IJKval = np.zeros([4,0]) # n_dim+1 x n_peaks\n",
+    "\n",
     "subset = TFs\n",
     "short_promoterome = promoterome[promoterome.gene.isin(subset)]\n",
-    "\n",
     "with Pool(processes=24) as pool:\n",
     "    OUT = pool.map(partial(find_tf_peaks_in_promoter,short_promoterome,window_kb), subset)\n",
-    "OUT = np.array(OUT)\n",
+    "IJKval = np.array(OUT)\n",
     "\n",
     "# make sparse tensor\n",
     "indices = IJKval[:3].astype(int)\n",
