Make sparse peaks tensor (upnae)

--- a/notebooks/Average_peaks_per_tf_prom.ipynb
+++ b/notebooks/Average_peaks_per_tf_prom.ipynb
@@ -330,12 +330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the peak positions of the TFs in the promoters\n",
-    "def find_tf_peaks_in_promoter(promoterome,window_kb,tf_i):\n",
+    "def find_tf_peaks_in_promoter(promoterome,experiment_tf,window_kb,tf_i):\n",
     "    tf = tf_i[0]\n",
     "    i = tf_i[1]\n",
     "    # get TF IDs\n",
@@ -389,57 +389,44 @@
     "        for peak in peaks:\n",
     "            mean_score = np.nanmean(score[:,peak[0]:peak[1]])\n",
     "            k = int((peak[0]+peak[1])/2)\n",
-<<<<<<< HEAD
     "            ijkval = np.array([i,j,k,mean_score])[:,None]\n",
     "            IJKval = np.concatenate([IJKval,ijkval],1)\n",
     "\n",
     "        \n",
     "    return IJKval\n",
     "\n",
-    "subset = TFs\n",
+    "subset = TFs[:10]\n",
     "short_promoterome = promoterome[promoterome.gene.isin(subset)]\n",
     "\n",
     "TF_IDX = np.concatenate([subset[:,None],np.arange(len(subset))[:,None]],1)\n",
     "\n",
     "with Pool(processes=24) as pool:\n",
-    "    OUT = pool.map(partial(find_tf_peaks_in_promoter,short_promoterome,window_kb), TF_IDX)\n",
+    "    OUT = pool.map(partial(find_tf_peaks_in_promoter,short_promoterome,experiment_tf,window_kb), TF_IDX)\n",
     "IJKval = np.zeros([4,0])\n",
     "for i,out in enumerate(OUT):\n",
     "    IJKval = np.concatenate([IJKval,out],1)\n",
-=======
-    "            jkval = np.array([j,k,mean_score])[:,None]\n",
-    "            JKval = np.concatenate([JKval,jkval],1)\n",
-    "\n",
-    "        \n",
-    "    return JKval\n",
-    "\n",
-    "\n",
-    "subset = TFs\n",
-    "short_promoterome = promoterome[promoterome.gene.isin(subset)]\n",
-    "with Pool(processes=24) as pool:\n",
-    "    OUT = pool.map(partial(find_tf_peaks_in_promoter,short_promoterome,window_kb), subset)\n",
-    "IJKval = np.array(OUT)\n",
->>>>>>> 9fc1974eb33dacfff78bcee28046ed6ce4733c24
     "\n",
     "# make sparse tensor\n",
     "indices = IJKval[:3].astype(int)\n",
     "values = IJKval[3]\n",
     "my_size = [short_promoterome.shape[0],TFs.shape[0],window_kb*2*1000]\n",
     "PromTfPos = torch.sparse_coo_tensor(indices, values, size=my_size)\n",
+    "\n",
     "# save tensor\n",
-    "#outfile = f\"../resources/PromTfPos_{genome}_TFs_only_QC_filtered_{window_kb}kb.pt\""
+    "outfile = \"../tmp/PromTfPos.pt\"\n",
+    "torch.save(PromTfPos,outfile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 161987)\n",
+      "(4, 103)\n",
       "1.468632679738562\n"
      ]
     }
