Chip and motif regulatory regions site count (upnae)

--- a/notebooks/Average_peaks_per_tf_prom.ipynb
+++ b/notebooks/Average_peaks_per_tf_prom.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,8 +388,12 @@
     "        # get the score and position and save in Peaks matrix\n",
     "        for peak in peaks:\n",
     "            mean_score = np.nanmean(score[:,peak[0]:peak[1]])\n",
-    "            k = int((peak[0]+peak[1])/2)\n",
-    "            ijkval = np.array([i,j,k,mean_score])[:,None]\n",
+    "            #k = int((peak[0]+peak[1])/2)\n",
+    "            ijkval = np.zeros([4,peak[1]-peak[0]])*np.nan\n",
+    "            ijkval[0,:] = i\n",
+    "            ijkval[1,:] = j\n",
+    "            ijkval[2,:] = np.arange(peak[0],peak[1])\n",
+    "            ijkval[3,:] = mean_score\n",
     "            IJKval = np.concatenate([IJKval,ijkval],1)\n",
     "\n",
     "        \n",
@@ -413,28 +417,28 @@
     "PromTfPos = torch.sparse_coo_tensor(indices, values, size=my_size)\n",
     "\n",
     "# save tensor\n",
-    "outfile = \"../tmp/PromTfPos.pt\"\n",
-    "torch.save(PromTfPos,outfile)"
+    "#outfile = \"../tmp/PromTfPos.pt\"\n",
+    "#torch.save(PromTfPos,outfile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4, 103)\n",
-      "1.468632679738562\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(4, 37637)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(IJKval.shape)\n",
-    "t = 92\n",
-    "print( t/TFs.shape[0]*promoterome.shape[0]/3600 )"
+    "IJKval.shape"
    ]
   },
   {
