check svd (jed)

--- a/notebooks/Test_get_chip_svd.ipynb
+++ b/notebooks/Test_get_chip_svd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,44 +14,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "infile_chip = '../results/mm10/Chip_tensors/Window_pm5kb_bin_size_10/Rara.hdf5'\n",
-    "infile_peak = '../results/mm10/Peak_tensors/Window_pm5kb/Rara.hdf5'\n",
+    "my_tf = 'Rara'\n",
+    "\n",
+    "infile_chip = f'../results/mm10/Chip_tensors/Window_pm5kb_bin_size_10/{my_tf}.hdf5'\n",
+    "infile_peak = f'../results/mm10/Peak_tensors/Window_pm5kb/{my_tf}.hdf5'\n",
     "window_kb = 5\n",
     "bin_size = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.00031504, 0.00040607, 0.00075255, 0.00081644, 0.00088342,\n",
-       "       0.00108351, 0.00112064, 0.00115883, 0.00122881, 0.001308  ,\n",
-       "       0.00132004, 0.00132659, 0.00145762, 0.00153486, 0.00155448,\n",
-       "       0.001635  , 0.00169704, 0.00200853, 0.00221715])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
-   "source": [
-    "1/S"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# get chip signal\n",
     "with h5py.File(infile_chip,'r') as hf:\n",
@@ -100,35 +88,6 @@
     "\n",
     "U = X @ Vh.T @ np.diag(1/S)\n",
     "U = U / np.linalg.norm(U,axis=0,keepdims=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "U = U / np.linalg.norm(U,axis=0,keepdims=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(24424000, 19)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "U.shape"
    ]
   },
   {
@@ -417,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
