--- a/notebooks/Test_pybigwig.ipynb
+++ b/notebooks/Test_pybigwig.ipynb
@@ -14,22 +14,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The entries you tried to add are out of order, precede already added entries, or otherwise use illegal values.\n Please correct this and try again.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 79\u001b[0m\n\u001b[1;32m     76\u001b[0m values \u001b[38;5;241m=\u001b[39m chr_values[\u001b[38;5;28mchr\u001b[39m][idx]\n\u001b[1;32m     78\u001b[0m \u001b[38;5;66;03m# add entries\u001b[39;00m\n\u001b[0;32m---> 79\u001b[0m \u001b[43mbw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maddEntries\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchrs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstarts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mends\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The entries you tried to add are out of order, precede already added entries, or otherwise use illegal values.\n Please correct this and try again.\n"
+     ]
+    }
+   ],
    "source": [
     "genome = 'mm10'\n",
     "window_kb = 5\n",
     "bin_size = 10\n",
     "\n",
+    "genome = 'hg38'\n",
+    "window_kb = 5\n",
+    "bin_size = 10\n",
+    "my_tf='PRMT6'\n",
+    "\n",
     "# get promoterome\n",
     "infile_promoterome=f\"/home/jbreda/Promoterome/results/{genome}/promoterome_pm{window_kb}kb_filtered_clustered_sorted.bed\"\n",
     "promoterome = pd.read_csv(infile_promoterome,sep='\\t')\n",
-    "idx_minus_strand = (promoterome.strand=='-').values\n",
     "N_prom = promoterome.shape[0]\n",
     "\n",
     "# get one tf\n",
-    "my_tf = 'Rara'\n",
     "infile_svd = f'../results/{genome}/svd/Window_pm{window_kb}kb_bin_size_{bin_size}/{my_tf}.hdf5'\n",
     "with h5py.File(infile_svd, 'r') as hf:\n",
     "    u = hf['U'][:,0]\n",
@@ -37,48 +52,9 @@
     "    N_pos = hf['U'].shape[0]//N_prom\n",
     "\n",
     "chip = np.reshape(u*s,[N_prom,N_pos]).T\n",
-    "# flip promoters on minus strand\n",
-    "chip[:,idx_minus_strand] = chip[:,idx_minus_strand][:,::-1]\n",
-    "#chip[np.isnan(chip)] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chr1\n",
-      "chr10\n",
-      "chr11\n",
-      "chr12\n",
-      "chr13\n",
-      "chr14\n",
-      "chr15\n",
-      "chr16\n",
-      "chr17\n",
-      "chr18\n",
-      "chr19\n",
-      "chr2\n",
-      "chr3\n",
-      "chr4\n",
-      "chr5\n",
-      "chr6\n",
-      "chr7\n",
-      "chr8\n",
-      "chr9\n",
-      "chrX\n",
-      "chrY\n"
-     ]
-    }
-   ],
-   "source": [
     "\n",
-    "# get chrom size\n",
-    "chrom_size_file = '../genome/mm10/Mus_musculus.GRCm38.dna.primary_assembly.chrom_size'\n",
+    "# get chrom size and initialize chr_values\n",
+    "chrom_size_file = f\"../resources/{genome}.chrom.sizes\"\n",
     "chr_size = []\n",
     "chr_values = {}\n",
     "CHR = promoterome.chr.unique()\n",
@@ -91,10 +67,15 @@
     "            chr_size.append((chr,size))\n",
     "            chr_values[chr] = np.zeros(int(np.ceil(size/bin_size)))\n",
     "\n",
-    "# fill in chr_values\n",
+    "# fill in chr_values with chip signal\n",
     "for p in range(N_prom):\n",
+    "\n",
     "    # skip if all nan\n",
     "    if np.all(np.isnan( chip[:,p] )):\n",
+    "        continue\n",
+    "\n",
+    "    # skip if all zero\n",
+    "    if np.all( chip[:,p] == 0 ):\n",
     "        continue\n",
     "\n",
     "    # get absolute and relative idx\n",
@@ -104,17 +85,18 @@
     "    idx = start_idx + rel_idx\n",
     "\n",
     "    # add values\n",
-    "    chr_values[chr][idx] = chr_values[chr][idx] + chip[rel_idx,p]\n",
+    "    chr_values[chr][idx] = chip[rel_idx,p]\n",
+    "    # if 2 promoters are overlaping the same bin, the chip signal is the same for both\n",
     "\n",
     "# write bigwig\n",
-    "with pyBigWig.open('../results/mm10/svd/Window_pm5kb_bin_size_10/Rara.bw', 'w') as bw:\n",
+    "outfile = 'tmp_output.bw'\n",
+    "with pyBigWig.open(outfile, 'w') as bw:\n",
     "\n",
     "    # add headers\n",
     "    bw.addHeader(chr_size)\n",
     "\n",
     "    # fill in the big wig chr by chr\n",
     "    for chr in chr_values.keys():\n",
-    "        print(chr)\n",
     "        \n",
     "        # get indices with non zero values\n",
     "        idx = np.where( chr_values[chr] != 0 )[0]\n",
@@ -126,7 +108,28 @@
     "        values = chr_values[chr][idx]\n",
     "\n",
     "        # add entries\n",
-    "        bw.addEntries(chrs, starts, ends, values)\n"
+    "        bw.addEntries(chrs, starts, ends, values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "len(idx)"
    ]
   }
  ],
@@ -146,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
